Add logback config for test and replace System.out to log.debug