@@ -40,7 +40,7 @@
 		<mockito.jupiter.version>3.3.3</mockito.jupiter.version>
 		<junit-platform.version>5.6.2</junit-platform.version>
 		<commons-compress.version>1.20</commons-compress.version>
-
+		<lombok.version>1.18.18</lombok.version>
 		<!-- Use most recent failsafe and surefire plugin versions -->
 		<maven-failsafe-plugin.version>2.22.0</maven-failsafe-plugin.version>
 		<maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
@@ -150,6 +150,14 @@
 	</dependencyManagement>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- Tests -->
 		<dependency>
 			<groupId>org.hamcrest</groupId>
@@ -243,7 +251,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m ${argLine}</argLine>
+					<argLine>-Xmx1024m
+						-Dlogback.configurationFile=${project.basedir}/../logback-test.xml
+						${argLine}</argLine>
 					<includes>
 						<include>*</include>
 					</includes>
@@ -394,6 +404,9 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
+							<argLine>-Xmx1024m
+								-Dlogback.configurationFile=${project.basedir}/../logback-test.xml
+								${argLine}</argLine>
 							<systemProperties>
 								<property>
 									<name>cv.dr.ord.location</name>
